# Scrivai-main

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  REVIEW_GUIDE.md  line_project_demo.md  line_project_demo_latest.md  line_project_demo_template_a (1).md  line_project_demo_template_b (1).md  line_project_demo_template_c (1).md  pyproject.toml  streamlit_app.py  附录2：南方电网公司基建新技术研究项目计划任务书-v70318.doc
.claude/commands/: commit.md
core/: __init__.py  chunkers.py  llm.py  project.py
core/audit/: __init__.py  engine.py
core/generation/: __init__.py  context.py  engine.py
core/knowledge/: __init__.py  store.py
data/: 2.json  3.json  4&5.json  6.json  7.json  8.json
demo/: __init__.py  app.py  config_loader.py  generator.py  image_manager.py  source_data.py  word_exporter.py
demo/config/: chapters.yaml  fields.yaml  template_variants.yaml
demo/templates/: approval.md.j2  approval_c.md.j2  chapter_1.md.j2  chapter_1_b.md.j2  chapter_1_c.md.j2  chapter_2.md.j2  chapter_2_b.md.j2  chapter_2_c.md.j2  chapter_3.md.j2  chapter_3_b.md.j2  chapter_3_c.md.j2  chapter_4.md.j2  chapter_4_b.md.j2  chapter_4_c.md.j2  chapter_5.md.j2  chapter_5_b.md.j2  chapter_5_c.md.j2  chapter_6.md.j2  chapter_6_b.md.j2  chapter_6_c.md.j2  chapter_7.md.j2  chapter_7_b.md.j2  chapter_7_c.md.j2  chapter_8.md.j2  chapter_8_b.md.j2  cover_c.md.j2  toc_b.md.j2
demo/tools/: __init__.py  __main__.py  (+1 more)
docs/: architecture.md  line_demo.md  sdk_design.md
examples/: project.yaml
scripts/: render_agent_architecture.py
tests/: conftest.py
utils/: __init__.py  doc_pipeline.py
(+151 files in other folders)
